# glOS2

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  deny.toml  i686-unknown-none.json  link.ld
.cargo/: config.toml
licenses/: multiboot2
src/: gdt.rs  idt.rs  kernel.rs  main.rs  vga.rs
