[package]
name = "glos2"
version = "0.0.1"
edition = "2021"
authors = ["GamingLiamStudios <58615717+GamingLiamStudios@users.noreply.github.com>"]
license = "LGPL-2.1-only"

build = "build.rs"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
libc = "0.2"
