[package]
name = "glos2"
version = "0.0.1"
edition = "2021"
authors = ["GamingLiamStudios <58615717+GamingLiamStudios@users.noreply.github.com>"]
license = "LGPL-2.1-only"

build = "build.rs"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.devel]
inherits = "dev"
panic = "abort"

opt-level = 1

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

lto = "thin"
opt-level = 2


[dependencies]
libc = "0.2"

paste = "1.0"
